Refactor: Reorganize JavaScript into modular files for better maintainability

--- a/index.html
+++ b/index.html
@@ -503,6 +503,15 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- JavaScript Modules -->
+    <script src="js/data-manager.js"></script>
+    <script src="js/task-manager.js"></script>
+    <script src="js/schedule-manager.js"></script>
+    <script src="js/subject-manager.js"></script>
+    <script src="js/timer-manager.js"></script>
+    <script src="js/settings-manager.js"></script>
+    <script src="js/notification-manager.js"></script>
+    <script src="js/ui-manager.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
